# chestnut-ecs

./: CMakeLists.txt  README.md
include/chestnut/ecs/: chestnut_ecs.hpp  command.hpp  command_queue.hpp  commands.hpp  component.hpp  component_batch.hpp  component_batch_guard.hpp  component_handle.hpp  component_handle.inl  component_handle.tpp  component_storage.hpp  component_storage.inl  component_storage.tpp  component_storage_iterator.inl  component_storage_segment.hpp  component_storage_segment.inl  component_storage_segment.tpp  component_traits.hpp  component_wrapper.hpp  constants.hpp  ecs.hpp  entity.hpp  entity_iterator.hpp  entity_query.hpp  entity_query.inl  entity_query.tpp  entity_query_guard.hpp  entity_query_guard.inl  entity_query_guard.tpp  entity_query_iterator.inl  entity_query_supplier.hpp  entity_query_supplier.inl  entity_registry.hpp  entity_registry.inl  entity_registry.tpp  entity_signature.hpp  entity_signature.inl  entity_signature.tpp  entity_world.hpp  entity_world.inl  (+8 more)
src/chestnut/ecs/: CMakeLists.txt  component.cpp  component_batch.cpp  component_batch_guard.cpp  component_storage_segment.cpp  entity_query.cpp  entity_query_guard.cpp  entity_registry.cpp  entity_signature.cpp  entity_world.cpp
tests/: CMakeLists.txt  commands_test.cpp  component_batch_test.cpp  component_storage_segment_test.cpp  component_storage_test.cpp  efficiency_tests.cpp  entity_query_supplier_test.cpp  entity_query_test.cpp  entity_registry_test.cpp  entity_signature_test.cpp  entity_world_benchmarks.cpp  entity_world_querying_test.cpp  entity_world_test.cpp  sparse_set_benchmarks.cpp  sparse_set_test.cpp  test_main.cpp  uuid_test.cpp
